节点颜色 改进

--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -74,8 +74,8 @@
         <div>
             <p>标记颜色</p>
             <div id="addNodeCP" class="input-group">
-                <input id="addNodeColorInput" class="form-control" type="text" value="#00AABB">
-                <span class="input-group-addon"><i></i></span>
+                <input id="addNodeColorInput" class="form-control" type="text" value="#00AABB" style="width: 80%; height: 34px">
+                <span class="input-group-addon" style="display: inline-block; width: 20%; height: 34px"><i></i></span>
             </div>
         </div>
     </div>
@@ -103,8 +103,8 @@
         <div>
             <p>标记颜色</p>
             <div id="editNodeCP" class="input-group">
-                <input id="editNodeColorInput" class="form-control" type="text" value="#00AABB">
-                <span class="input-group-addon"><i></i></span>
+                <input id="editNodeColorInput" class="form-control" type="text" value="#00AABB" style="width: 80%; height: 34px">
+                <span class="input-group-addon" style="display: inline-block; width: 20%; height: 34px"><i></i></span>
             </div>
         </div>
     </div>
