--- a/app/view/microIndustryChain/createChainView/createChainView.css
+++ b/app/view/microIndustryChain/createChainView/createChainView.css
@@ -49,6 +49,51 @@ a {
     border-bottom: 1px solid #CCCCCC;
     background: whitesmoke;
 }
+#topToolBar #topToolBarMenu{
+    width: 100%;
+    height: 30px;
+    border-bottom: 1px solid #CCCCCC;
+    background: whitesmoke;
+}
+#topToolBar .topToolBarBigBlock{
+    display: flex;
+    flex-flow: row;
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid #CCCCCC;
+    background: whitesmoke;
+}
+#topToolBar .topToolBarBigBlockCell{
+    display: flex;
+    flex-flow: row;
+    width: auto;
+    height: 100%;
+    padding: 8px;
+    border-right: 1px solid #CCCCCC;
+}
+#topToolBar .topToolBarBigBtn{
+    width: 50px;
+    height: 100%;
+    margin-left: 4px;
+    margin-right: 4px;
+    padding: 0;
+    text-align: center;
+    font-weight: bold;
+    color: rgba(0,0,0,0);
+}
+#topToolBar .topToolBarBigBtn:hover{
+    color: black;
+}
+#addBtn{
+    background: white url(icon/add.svg) no-repeat center;
+    background-size: 60%;
+    font-size: 6px;
+}
+#previewBtn{
+    background: white url(icon/preview.svg) no-repeat center;
+    background-size: 60%;
+    font-size: 8px;
+}
 
 #leftToolBar{
     position: fixed;
@@ -99,7 +144,7 @@ a {
 
 #addNodeBoard{
     position: fixed;
-    z-index: 10000;
+    z-index: 100;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -119,7 +164,7 @@ a {
 
 #editNodeBoard{
     position: fixed;
-    z-index: 10000;
+    z-index: 100;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -140,7 +185,7 @@ a {
 
 #addConnectionBoard{
     position: fixed;
-    z-index: 10000;
+    z-index: 100;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -161,7 +206,7 @@ a {
 
 #editConnectionBoard{
     position: fixed;
-    z-index: 10000;
+    z-index: 100;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
