相似推荐前端实现

--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
@@ -17,6 +17,8 @@
 <!--</div>-->
 
 <h3>公司介绍</h3>
+<canvas id="canvas" width="600" height="600" ></canvas>
+ 
 <table>
     <tr>
         <td class="td_name">公司中文名称</td><td class="td_value" colspan="5">{{companyDetails.compName}}</td>
