增加公司节点、加载模块引进、预览界面改进

--- a/app/view/microIndustryChain/createChainView/bootstrap-colorpicker.css
+++ b/app/view/microIndustryChain/createChainView/bootstrap-colorpicker.css
@@ -70,7 +70,7 @@
   background-size: contain;
 }
 .colorpicker {
-  position: fixed;
+  position: absolute;
   padding: 4px;
   min-width: 130px;
   margin-top: 1px;
