--- a/app/view/microIndustryChain/createChainView/createChainView.css
+++ b/app/view/microIndustryChain/createChainView/createChainView.css
@@ -84,7 +84,12 @@ a {
 #topToolBar .topToolBarBigBtn:hover{
     color: black;
 }
-#addBtn{
+#addCompanyBtn{
+    background: white url(icon/addCompany.svg) no-repeat center;
+    background-size: 50%;
+    font-size: 8px;
+}
+#addDiyBtn{
     background: white url(icon/add.svg) no-repeat center;
     background-size: 50%;
     font-size: 8px;
@@ -129,12 +134,12 @@ a {
     flex-flow: row wrap;
     width: 100%;
     padding: 5px;
-    border-bottom: 3px solid #AAAAAA;
+    border-bottom: 1px solid #CCCCCC;
     background: white;
 }
 #leftToolBar .historyBlock{
     width: 100%;
-    height: 150px;
+    height: 200px;
     border-bottom: 1px solid #CCCCCC;
     resize: vertical;
     overflow:auto;
@@ -144,7 +149,7 @@ a {
     display: flex;
     flex-flow: row;
     width: 100%;
-    height: 40px;
+    height: auto;
     padding: 5px;
     margin-top: 4px;
     margin-bottom: 4px;
@@ -160,6 +165,33 @@ a {
 }
 #leftToolBar .historyBlock .historyBlockCell button{
     width: 25%;
+}
+
+#addCompanyNodeBoard{
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+    width: 400px;
+    height: auto;
+    border: 1px solid #CCCCCC;
+    background: #FFF;
+    border-radius: 4px;
+    padding: 10px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
+}
+#addCompanyNodeBoard input{
+    width: 100%;
+    margin-bottom: 10px;
+}
+#addCompanyNodeBoard .tableDiv{
+    width: 100%;
+    height: 400px;
+    overflow-y: scroll;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
 }
 
 #addNodeBoard{
@@ -184,7 +216,7 @@ a {
 
 #editNodeBoard{
     position: absolute;
-    z-index: 4;
+    z-index: 5;
     display: flex;
     flex-flow: column;
     justify-content: space-between;
@@ -249,10 +281,11 @@ a {
     position: absolute;
     z-index: 1;
     display: flex;
-    width: 80px;
-    height: 40px;
+    width: 100px;
+    height: 50px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
+    font-size: 6px;
     background: #FFF;
     justify-content: center;
     align-items: center;
@@ -263,7 +296,7 @@ a {
 }
 
 .node-anchor-right{
-    left: 72px;
+    left: 92px;
     position: absolute;
     z-index: 3;
     width: 12px;
@@ -273,14 +306,9 @@ a {
     background: whitesmoke;
 }
 .node-anchor-right:hover{
-    left: 72px;
-    position: absolute;
-    z-index: 3;
     width: 14px;
     height: 14px;
     border-radius: 7px;
-    border: 1px solid #CCCCCC;
-    background: whitesmoke;
 }
 .node-anchor-left{
     left: -6px;
@@ -293,14 +321,9 @@ a {
     background: whitesmoke;
 }
 .node-anchor-left:hover{
-    left: -6px;
-    position: absolute;
-    z-index: 3;
     width: 14px;
     height: 14px;
     border-radius: 7px;
-    border: 1px solid #CCCCCC;
-    background: whitesmoke;
 }
 .node-anchor-top{
     top: -6px;
@@ -313,14 +336,9 @@ a {
     background: whitesmoke;
 }
 .node-anchor-top:hover{
-    top: -6px;
-    position: absolute;
-    z-index: 3;
     width: 14px;
     height: 14px;
     border-radius: 7px;
-    border: 1px solid #CCCCCC;
-    background: whitesmoke;
 }
 .node-anchor-bottom{
     top: 32px;
@@ -333,12 +351,8 @@ a {
     background: whitesmoke;
 }
 .node-anchor-bottom:hover{
-    top: 32px;
-    position: absolute;
-    z-index: 3;
     width: 14px;
     height: 14px;
     border-radius: 7px;
-    border: 1px solid #CCCCCC;
-    background: whitesmoke;
 }
+
