--- a/app/view/microIndustryChain/previewChainView/previewChainView.css
+++ b/app/view/microIndustryChain/previewChainView/previewChainView.css
@@ -45,10 +45,11 @@ a {
     position: absolute;
     z-index: 1;
     display: flex;
-    width: 80px;
-    height: 40px;
+    width: 100px;
+    height: 50px;
     border: 1px solid #CCCCCC;
     border-radius: 5px;
+    font-size: 6px;
     background: #FFF;
     justify-content: center;
     align-items: center;
