--- a/app/view/macroIndustryDisplay/macroIndustryDisplay.css
+++ b/app/view/macroIndustryDisplay/macroIndustryDisplay.css
@@ -11,3 +11,17 @@
     height: 120px;
     background-color:rgba(0, 0, 0, 0.7);
 }
+
+.dataPane2{
+    line-height: 20px;
+    font-size: 10px;
+    color: white;
+    text-align: center;
+    border-radius: 20px;
+    position: fixed;
+    top: 32px;
+    margin-left:64px;
+    width: 74px;
+    height: 120px;
+    background-color:rgba(0, 0, 0, 0.7);
+}
