--- a/app/view/microIndustryChain/createChainView/createChainView.html
+++ b/app/view/microIndustryChain/createChainView/createChainView.html
@@ -2,14 +2,14 @@
 
 <div id="topElement" ng-mousedown="hideAllBoard()" onselectstart="return false;">
 
-    <div>
+    <div id="displayDiv" style="display: block; height: 2000px; width: 2000px;">
         <canvas id="netBackground" style="left: 0; top: 0;"></canvas>
         <canvas id="connectionBackground" style="left: 0; top: 0;"></canvas>
         <canvas id="animeBackground" style="left: 0; top: 0;"></canvas>
         <canvas id="canvas" data-toggle="context" data-target="#canvas-menu" style="left: 0; top: 0;"></canvas>
-    </div>
 
-    <div id="nodeDiv">
+        <div id="nodeDiv">
+        </div>
     </div>
 
     <div id="leftToolBar">
@@ -68,11 +68,11 @@
                         title="保存作品" data-content="将您的作品草稿【保存】到云端仓库">
                     保存
                 </button>
-                <a id="previewBtn" class="btn btn-default topToolBarBigBtn" ui-sref="microIndustryChain.previewChainView({'nodeIDList':nodeIDList, 'nodeList':nodeList, 'nodeDisplayList':nodeDisplayList, 'connectionList':connectionList})"
+                <button id="previewBtn" class="btn btn-default topToolBarBigBtn" ui-sref="microIndustryChain.previewChainView({'nodeIDList':nodeIDList, 'nodeList':nodeList, 'nodeDisplayList':nodeDisplayList, 'connectionList':connectionList})"
                         data-popover="popover" data-trigger="hover" data-placement="bottom"
                         title="预览作品" data-content="以阅读者的视角【查看】此产业链">
-                    预览</a>
-                <button id="downloadBtn" class="btn btn-default topToolBarBigBtn"
+                    预览</button>
+                <button id="downloadBtn" class="btn btn-default topToolBarBigBtn" ng-click="takeScreenshot()"
                         data-popover="popover" data-trigger="hover" data-placement="bottom"
                         title="下载图片" data-content="将您的作品以图片格式【下载】到本地">
                     下载</button>
@@ -253,6 +253,7 @@
 
 <script src="view/microIndustryChain/createChainView/bootstrap-contextmenu.js"></script>
 <script src="view/microIndustryChain/createChainView/bootstrap-colorpicker.js"></script>
+<script src="view/microIndustryChain/createChainView/html2canvas.min.js"></script>
 <script>
     $(function () {
         // Basic instantiation:
@@ -287,5 +288,6 @@
             delay:{show:500, hide:100},
         });
     });
+
 </script>
 <link rel="stylesheet" href="view/microIndustryChain/createChainView/createChainView.css">
