详细推荐界面完善
详细推荐界面完善

--- a/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
+++ b/app/view/macroIndustryDisplay/companyDetails/companyDetails.html
@@ -17,7 +17,7 @@
 <!--</div>-->
 
 <h3>公司介绍</h3>
-<canvas id="canvas" width="600" height="600" ></canvas>
+<div id="similarRecommendChart" style="width: 600px;height: 600px"></div>
  
 <table>
     <tr>
@@ -112,3 +112,4 @@
 </table>
 
 <link rel="stylesheet" href="view/macroIndustryDisplay/companyDetails/companyDetails.css"/>
+<script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
