--- a/app/view/login/login.html
+++ b/app/view/login/login.html
@@ -1,10 +1,10 @@
 <nav class="david-navbar" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
+    <div>
+        <div>
             <a class="navbar-brand"><img class="nav-icon" src="view/login/citi-white.svg" alt="花旗"></a>
         </div>
         <div>
-            <ul class="nav navbar-nav">
+            <ul class="david-navbar-right">
                 <li ui-sref="home"><a>首页</a></li>
             </ul>
         </div>
@@ -14,7 +14,7 @@
 
 <div class="login-block">
     <div id="login-left-block">
-        <img src="view/login/ad.png">
+        <img id="login-ad" src="view/login/ad.png">
     </div>
     <div id="login-right-block">
         <div id="login-cell">
